# Day07

TicTacToe/: README.MD
TicTacToe/includes/Game/: GameExceptions.hpp  GameMoveModel.h  NetworkTicTacToe.hpp  TicTacToe.hpp
TicTacToe/includes/SocketCommunication/: ISocketProxy.hpp  SocketClient.hpp  SocketProxyExceptions.h  SocketServer.hpp
TicTacToe/src/: CMakeLists.txt
TicTacToe/src/Exe/: CMakeLists.txt  main.cpp
TicTacToe/src/Game/: CMakeLists.txt  GameExceptions.cpp  NetworkTicTacToe.cpp  ServerWizard.cpp  TicTacToe.cpp
TicTacToe/src/SocketCommunication/: CMakeLists.txt  NetworkProxyClient.cpp  NetworkProxyServer.cpp  SocketClient.cpp  SocketProxyExceptions.cpp  SocketServer.cpp
ex00/: .SublProjTest.sublime-project
ex00/includes/Palindrome/: Palindrome.h
ex00/src/: CMakeLists.txt
ex00/src/Exe/: CMakeLists.txt  main.cpp
ex00/src/PalindromeLib/: CMakeLists.txt  Palindrome.cpp
